--- a/src/app/software/component/setup-customer-detail/setup-customer-detail.component.html
+++ b/src/app/software/component/setup-customer-detail/setup-customer-detail.component.html
@@ -28,9 +28,9 @@
         </button>
         <mat-menu #printMenu="matMenu">
             <button mat-menu-item (click)="buttonPrintCustomer()">Customer's Information Sheet</button>
-            <button mat-menu-item>Buyer's Undertaking</button>
-            <button mat-menu-item>Reservation Agreement</button>
-            <button mat-menu-item>Computation Sheet</button>
+            <button mat-menu-item (click)="buttonPrintBuyersUndertaking()">Buyer's Undertaking</button>
+            <button mat-menu-item (click)="buttonPrintReservationAgreement()">Reservation Agreement</button>
+            <button mat-menu-item (click)="buttonPrintComputationSheet()">Computation Sheet</button>
         </mat-menu>
         <button mat-flat-button color="warn" routerLink="/software/setup-customer-list">
             Close
