--- a/src/app/software/component/reports/reports.component.html
+++ b/src/app/software/component/reports/reports.component.html
@@ -15,7 +15,7 @@
 </mat-toolbar>
 <mat-divider></mat-divider>
 <div class="software-container">
-    <div fxLayout="row" fxLayout.xs="column">
+    <div fxLayout="row" fxLayout.xs="column" *ngIf="isAccountReceivable == false">
         <div fxFlex="25" style="padding: 5px;">
             <mat-form-field appearance="fill" style="width: 100%;">
                 <mat-label>Start date</mat-label>
@@ -40,9 +40,24 @@
 
         </div>
     </div>
+    <div fxLayout="row" fxLayout.xs="column" *ngIf="isAccountReceivable == true">
+        <div fxFlex="25" style="padding: 5px;">
+            <mat-form-field appearance="fill" style="width: 100%;">
+                <mat-label>Date as of</mat-label>
+                <input matInput [matDatepicker]="dateAsOfPicker" [formControl]="dateAsOfFilterFormControl"
+                    [value]="dateAsOfFilterFormControl.value"
+                    (dateChange)="dateAsOfFiltersDateChange('change', $event)">
+                <mat-datepicker-toggle matSuffix [for]="dateAsOfPicker"></mat-datepicker-toggle>
+                <mat-datepicker #dateAsOfPicker></mat-datepicker>
+            </mat-form-field>
+        </div>
+        <div fxFlex="75" style="padding: 5px;">
+
+        </div>
+    </div>
 </div>
 <mat-divider></mat-divider>
-<mat-tab-group mat-align-tabs="start" [(selectedIndex)]="selectedTabIndex">
+<mat-tab-group mat-align-tabs="start" [(selectedIndex)]="selectedTabIndex" (selectedTabChange)="onTabChanged($event);">
     <mat-tab label="Sold Units">
         <div *ngIf="isSpinnerShowRepSummarySoldUnit" style="padding: 100px 0px 50px 0px; text-align: center;">
             <h4>Please wait...</h4>
@@ -568,6 +583,87 @@
                         </mat-table>
 
                         <mat-paginator #brokerPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </mat-tab>
+    <mat-tab label="Accounts Receivable">
+        <div *ngIf="isSpinnerShowRepSummaryAccountsReceivable" style="padding: 100px 0px 50px 0px; text-align: center;">
+            <h4>Please wait...</h4>
+            <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+        </div>
+        <div [hidden]="!isContentShowRepSummaryAccountsReceivable">
+            <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Filter</mat-label>
+                            <input matInput (keyup)="accountsReceivableFilter($event)" placeholder="Filter"
+                                #accountsReceivableFilterData />
+                        </mat-form-field>
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="accountsReceivableDataSource" #accountsReceivableSort="matSort" matSort
+                            style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="SoldUnitNumber">
+                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Sold Unit No.
+                                </mat-header-cell>
+                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.SoldUnitNumber}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="SoldUnitDate">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> Date
+                                </mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.SoldUnitDate}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Customer">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Customer
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Customer}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Price">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Amount
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Price}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PricePayment">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Payment
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.PricePayment}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="PriceBalance">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Balance
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.PriceBalance}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Status">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="accountsReceivableDisplayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: accountsReceivableDisplayedColumns;"></mat-row>
+
+                        </mat-table>
+
+                        <mat-paginator #accountsReceivablePaginator [pageSizeOptions]="[10, 50, 100, 200]">
+                        </mat-paginator>
                     </div>
                 </div>
             </div>
