Fixed Issues from Backlog

--- a/src/app/software/component/setup-unit-detail/setup-unit-detail.component.html
+++ b/src/app/software/component/setup-unit-detail/setup-unit-detail.component.html
@@ -7,7 +7,7 @@
         &nbsp;&nbsp;
         <img src="../../../../assets/images/software-icons/unit.png" class="toolBar-img-style" />
         <span class="toolbar-title-style">
-            Unit Detail
+            Inventory Detail
         </span>
         <span class="toolbar-spacer"></span>
         <button mat-flat-button color="primary" [disabled]="isUnitSaveButtonDisabled" style="margin-right: 5px;"
