--- a/src/app/software/software.component.html
+++ b/src/app/software/software.component.html
@@ -55,7 +55,7 @@
                             <a mat-list-item routerLink="/software/setup-unit-list"
                                 style="height: auto; padding: 10px 0px;">
                                 <img src="./../../assets/images/software-icons/unit.png" height="30" />
-                                &nbsp;&nbsp; Unit
+                                &nbsp;&nbsp; Inventory
                             </a>
                             <a mat-list-item routerLink="/software/setup-customer-list"
                                 style="height: auto; padding: 10px 0px;">
@@ -101,7 +101,7 @@
                             </a>
                         </mat-nav-list>
                     </mat-expansion-panel>
-
+                    <!-- 
                     <mat-expansion-panel class="mat-elevation-z0" style="margin: 5px;">
                         <mat-expansion-panel-header>
                             <mat-panel-title>
@@ -122,7 +122,7 @@
                                 &nbsp;&nbsp; Settings
                             </a>
                         </mat-nav-list>
-                    </mat-expansion-panel>
+                    </mat-expansion-panel> -->
 
                     <mat-expansion-panel class="mat-elevation-z0" style="margin: 5px;" hideToggle>
                         <mat-expansion-panel-header routerLink="/software/reports" #reportPanelHeader
