--- a/src/app/software/component/dashboard/dashboard.component.html
+++ b/src/app/software/component/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
                 style="width: 100%; font-size: 17px; padding: 10px 0px 10px 10px;"><img
                     src="../../../../assets/images//software-icons/unit.png" height="70" style="margin-bottom: 7px;" />
                 <br />
-                Unit
+                Inventory
             </button>
         </div>
         <div fxFlex="25" style="padding: 5px;">
