--- a/src/app/software/component/setup-broker-detail/setup-broker-detail.component.html
+++ b/src/app/software/component/setup-broker-detail/setup-broker-detail.component.html
@@ -100,9 +100,14 @@
                         </mat-form-field>
                     </div>
                     <div fxFlex="25" style="padding: 5px;">
-                        <mat-form-field appearance="fill" style="width: 100%;">
+                        <!-- <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>Religion</mat-label>
                             <input matInput [(ngModel)]="mstBrokerModel.Religion" [ngModelOptions]="{standalone: true}"
+                                [disabled]="mstBrokerModel.IsLocked">
+                        </mat-form-field> -->
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>TIN</mat-label>
+                            <input matInput [(ngModel)]="mstBrokerModel.TIN" [ngModelOptions]="{standalone: true}"
                                 [disabled]="mstBrokerModel.IsLocked">
                         </mat-form-field>
                     </div>
@@ -145,18 +150,11 @@
                                 [disabled]="mstBrokerModel.IsLocked">
                         </mat-form-field>
                     </div>
-                    <div fxFlex="25" style="padding: 5px;">
+                    <div fxFlex="50" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>License Number</mat-label>
                             <input matInput [(ngModel)]="mstBrokerModel.LicenseNumber"
                                 [ngModelOptions]="{standalone: true}" [disabled]="mstBrokerModel.IsLocked">
-                        </mat-form-field>
-                    </div>
-                    <div fxFlex="25" style="padding: 5px;">
-                        <mat-form-field appearance="fill" style="width: 100%;">
-                            <mat-label>TIN</mat-label>
-                            <input matInput [(ngModel)]="mstBrokerModel.TIN" [ngModelOptions]="{standalone: true}"
-                                [disabled]="mstBrokerModel.IsLocked">
                         </mat-form-field>
                     </div>
                 </div>
@@ -210,7 +208,7 @@
                 <div fxLayout="row" fxLayout.xs="column">
                     <div fxFlex="25" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
-                            <mat-label>Firm</mat-label>
+                            <mat-label>Telephone Number</mat-label>
                             <input matInput [(ngModel)]="mstBrokerModel.RealtyFirmTelephoneNumber"
                                 [ngModelOptions]="{standalone: true}" [disabled]="mstBrokerModel.IsLocked">
                         </mat-form-field>
