--- a/src/app/software/component/setup-unit-detail/setup-unit-detail.component.html
+++ b/src/app/software/component/setup-unit-detail/setup-unit-detail.component.html
@@ -98,7 +98,7 @@
         <div fxLayout="row" fxLayout.xs="column">
             <div fxFlex="25" style="padding: 5px;">
                 <mat-form-field appearance="fill" style="width: 100%;">
-                    <mat-label>TCP</mat-label>
+                    <mat-label>TUP</mat-label>
                     <input matInput [(ngModel)]="mstUnitModel.Price" [ngModelOptions]="{standalone: true}"
                         [disabled]="mstUnitModel.IsLocked">
                 </mat-form-field>
