--- a/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
+++ b/src/app/software/component/activity-sold-unit-detail/activity-sold-unit-detail.component.html
@@ -696,7 +696,85 @@
         </mat-tab>
         <mat-tab label="Co-Owner">
             <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 3px; text-align: right;">
+                        <button mat-flat-button color="primary" (click)="buttonAddSoldUnitCoOwner()"
+                            [disabled]="trnSoldUnitModel.IsLocked">
+                            Add
+                        </button>
+                    </div>
+                </div>
 
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Filter</mat-label>
+                            <input matInput (keyup)="soldUnitCoOwnerFilter($event)" placeholder="Filter"
+                                #soldUnitCoOwnerFilterData />
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="soldUnitCoOwnerDataSource" #soldUnitCoOwnerSort="matSort" matSort
+                            style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="ButtonEdit">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="primary" (click)="buttonEditSoldUnitCoOwner(row)"
+                                        [disabled]="trnSoldUnitModel.IsLocked">
+                                        Edit
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ButtonDelete">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="warn" (click)="buttonDeleteSoldUnitCoOwner(row)"
+                                        [disabled]="trnSoldUnitModel.IsLocked">
+                                        Delete
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="CustomerCode">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Customer Code
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.CustomerCode}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Customer">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Customer
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.Customer}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Address">
+                                <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Address
+                                </mat-header-cell>
+                                <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Address}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="soldUnitCoOwnerDisplayedColumns">
+                            </mat-header-row>
+                            <mat-row *matRowDef="let row; columns: soldUnitCoOwnerDisplayedColumns;">
+                            </mat-row>
+
+                        </mat-table>
+
+                        <mat-paginator #soldUnitCoOwnerPaginator [pageSizeOptions]="[10, 50, 100, 200]">
+                        </mat-paginator>
+                    </div>
+                </div>
             </div>
         </mat-tab>
     </mat-tab-group>
